made parsiong of URL references more robust.